--- a/styles/sass/components/_card.scss
+++ b/styles/sass/components/_card.scss
@@ -34,7 +34,8 @@
     		width: -ms-calc(100% - 480px);
     		width: calc(100% - 480px);
 			> h3 {
-				display: inline-block;
+				display: block;
+			    display: -webkit-box;
 				color: $c-orange;
 				font-size: 18px;
 				font-weight: 400;
@@ -42,6 +43,11 @@
 				line-height: 27px;
 				margin: -7px 0px 10px;
 				max-width: 180px; 
+			    max-height: 78px;
+			    -webkit-line-clamp: 3;
+			    -webkit-box-orient: vertical;
+			    overflow: hidden;
+			    text-overflow: ellipsis;
 			}
 			> .time {
 				font-size: 11px;
@@ -52,6 +58,10 @@
 				> i {
 					margin-right: 8px;
 				}
+			}
+			> .tags {
+				max-height: 85px;
+				overflow: hidden;
 			}
 			> .likes {
 				@include clearfix;
